--- a/javascript/main.html
+++ b/javascript/main.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>triangle</title>
+        <script type="text/javascript" src="main.js"></script>
     </head>
 
     <body>
